--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -52,6 +52,7 @@
       <jsf.api.version>1.2_13</jsf.api.version>
       <jaxws.api.version>2.1</jaxws.api.version>
       <interceptor.api.version>1.0.0.Beta1</interceptor.api.version>
+      <errai.version>1.1-SNAPSHOT</errai.version>
    </properties>
 
    <dependencyManagement>
