--- a/weld-spi/pom.xml
+++ b/weld-spi/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
       <artifactId>weld-api-parent</artifactId>
       <groupId>org.jboss.weld</groupId>
@@ -24,7 +25,7 @@
          <groupId>javax.enterprise</groupId>
          <artifactId>cdi-api</artifactId>
       </dependency>
-      
+
       <dependency>
          <groupId>javax.persistence</groupId>
          <artifactId>persistence-api</artifactId>
@@ -37,37 +38,37 @@
          <scope>test</scope>
          <classifier>jdk15</classifier>
       </dependency>
-      
+
       <dependency>
-      	<groupId>javax.transaction</groupId>
-      	<artifactId>jta</artifactId>
+         <groupId>javax.transaction</groupId>
+         <artifactId>jta</artifactId>
          <optional>true</optional>
       </dependency>
-      
+
       <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
          <optional>true</optional>
       </dependency>
-      
+
       <dependency>
-      	<groupId>javax.annotation</groupId>
-      	<artifactId>jsr250-api</artifactId>
-      	<optional>true</optional>
+         <groupId>javax.annotation</groupId>
+         <artifactId>jsr250-api</artifactId>
+         <optional>true</optional>
       </dependency>
-      
+
       <dependency>
          <groupId>javax.validation</groupId>
          <artifactId>validation-api</artifactId>
          <optional>true</optional>
       </dependency>
-      
+
       <dependency>
          <groupId>javax.faces</groupId>
          <artifactId>jsf-api</artifactId>
          <optional>true</optional>
       </dependency>
-      
+
       <dependency>
          <groupId>org.jboss.spec.javax.ejb</groupId>
          <artifactId>jboss-ejb-api_3.1_spec</artifactId>
@@ -75,9 +76,14 @@
       </dependency>
 
       <dependency>
-        <groupId>org.jboss.spec.javax.interceptor</groupId>
-        <artifactId>jboss-interceptors-api_1.1_spec</artifactId>
-        <optional>true</optional>
+         <groupId>org.jboss.spec.javax.interceptor</groupId>
+         <artifactId>jboss-interceptors-api_1.1_spec</artifactId>
+         <optional>true</optional>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.weld</groupId>
+         <artifactId>weld-api</artifactId>
       </dependency>
 
    </dependencies>
